:bug: Fix uploader not working on IE

--- a/app/assets/stylesheets/partials/inputs/_file.css.sass
+++ b/app/assets/stylesheets/partials/inputs/_file.css.sass
@@ -17,6 +17,10 @@
     height: auto
     position: relative
 
+    label
+      display: block
+      +absolute(0,0,0,0)
+
   .progress
     height: 4px
     +absolute(0,0,initial,0)
